🐛 fix team page styles on mobile when link around image is present

--- a/site/gdocs/components/Person.scss
+++ b/site/gdocs/components/Person.scss
@@ -23,7 +23,8 @@
     }
 }
 
-.person-image {
+.person-image,
+.person-image--link-wrapper {
     picture {
         display: flex; // Fix extra padding at the bottom.
     }
